fixed container covering button

--- a/src/styles/Create_Char.css
+++ b/src/styles/Create_Char.css
@@ -94,8 +94,8 @@
 }
 
 .char-img {
-  height: 120px;
-  width: 120px;
+  height: 105px;
+  width: 105px;
   border-radius: 20px;
   margin-bottom: 5px;
 }
